RESOLVED FIXED90763
[GTK] Fix inspector detach when inspector was attached by the client
https://bugs.webkit.org/show_bug.cgi?id=90763
Summary [GTK] Fix inspector detach when inspector was attached by the client
Carlos Garcia Campos
Reported 2012-07-09 01:31:16 PDT
When the inspector is detached, we are unconditionally removing it from the inspected view, but if the inspector was attached by the client, the parent might be another widget.
Attachments
Patch (1.63 KB, patch)
2012-07-09 01:33 PDT, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2012-07-09 01:33:17 PDT
Carlos Garcia Campos
Comment 2 2012-07-09 08:12:05 PDT
Note You need to log in before you can comment on or make changes to this bug.