[GTK] Fix inspector detach when inspector was attached by the client https://bugs.webkit.org/show_bug.cgi?id=90763

Reviewed by Martin Robinson.

When the inspector is detached, we are unconditionally removing it
from the inspected view, but if the inspector was attached by the
client, the parent might be another widget.

* UIProcess/gtk/WebInspectorProxyGtk.cpp:
(WebKit::WebInspectorProxy::platformDetach): Remove the inspector
view from its parent widget.

Canonical link: https://commits.webkit.org/108620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122108 268f45cc-cd09-0410-ab3c-d52691b4dbfc