Source/WebKit2/UIProcess/gtk/WebInspectorProxyGtk.cpp
@@ -195,8 +195,11 @@ void WebInspectorProxy::platformDetach()
         return;
 
     GRefPtr<GtkWidget> inspectorView = m_inspectorView;
-    if (!m_client.detach(this))
-        gtk_container_remove(GTK_CONTAINER(m_page->viewWidget()), m_inspectorView);
+    if (!m_client.detach(this)) {
+        GtkWidget* parent = gtk_widget_get_parent(m_inspectorView);
+        ASSERT(parent);
+        gtk_container_remove(GTK_CONTAINER(parent), m_inspectorView);
+    }
 
     if (!m_isVisible)
         return;
